<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="point">.</string>
    <string name="div">/</string>
    <string name="equals">=</string>
    <string name="mem_r">MR</string>
    <string name="mem_c">MC</string>
    <string name="mem_s">MS</string>
    <string name="backspace">←</string>
    <string name="clear">CLEAR</string>
    <string name="enter_value">Enter a value</string>
</resources>